engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_esc_hint_idle.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  esc esc to edit previous message                                              "
