engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_esc_hint_primed.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  esc again to edit previous message                                            "
